依赖修正，可以在前端看到依赖的相关消息