@@ -13,24 +13,21 @@ import org.eclipse.lsp4j.MessageParams;
 import org.eclipse.lsp4j.MessageType;
 import org.eclipse.lsp4j.SetTraceParams;
 import com.google.gson.Gson;
+
 import org.apache.maven.model.Model;
 import org.apache.maven.model.io.xpp3.MavenXpp3Reader;
 import org.eclipse.aether.RepositorySystem;
-import org.eclipse.aether.DefaultRepositorySystemSession;
-import org.eclipse.aether.repository.LocalRepository;
-import org.eclipse.aether.connector.basic.BasicRepositoryConnectorFactory;
-import org.eclipse.aether.transport.file.FileTransporterFactory;
-import org.eclipse.aether.transport.http.HttpTransporterFactory;
-import org.eclipse.aether.spi.connector.RepositoryConnectorFactory;
-import org.eclipse.aether.spi.connector.transport.TransporterFactory;
+import org.eclipse.aether.RepositorySystemSession;
+import org.eclipse.aether.supplier.RepositorySystemSupplier;
 import org.eclipse.aether.collection.CollectRequest;
 import org.eclipse.aether.repository.RemoteRepository;
 import org.eclipse.aether.graph.DependencyNode;
+import org.eclipse.aether.graph.Dependency;
 import org.eclipse.aether.artifact.DefaultArtifact;
+import org.eclipse.aether.repository.LocalRepository;
 import java.io.File;
 import java.io.FileReader;
 import java.util.*;
-import org.eclipse.aether.impl.DefaultServiceLocator;
 
 /**
  * 最基础的 LanguageServer 实现
@@ -77,66 +74,99 @@ public class SimpleLanguageServer implements LanguageServer {
 
     /**
      * 依赖分析请求，参数为 pom.xml 路径，返回所有依赖（含传递依赖、冲突）JSON 字符串
+     * 
      * @param pomPath pom.xml 文件路径（可为 null，默认取当前工作目录下 pom.xml）
      */
     @JsonRequest("maven/analyzeDependencies")
     public CompletableFuture<String> analyzeDependencies(String pomPath) {
+        // supplyAsync 泛型指定为 String，避免类型不匹配
         return CompletableFuture.supplyAsync(() -> {
             try {
                 // 1. 解析 pom.xml 路径
-                String pomFilePath = (pomPath == null || pomPath.isEmpty()) ? new File("pom.xml").getAbsolutePath() : pomPath;
+                String pomFilePath = (pomPath == null || pomPath.isEmpty())
+                        ? new File("pom.xml").getAbsolutePath()
+                        : pomPath;
                 File pomFile = new File(pomFilePath);
                 if (!pomFile.exists()) {
                     return "{\"error\":\"pom.xml 文件不存在: " + pomFilePath + "\"}";
                 }
-                // 2. 初始化 Maven Resolver
-                DefaultServiceLocator locator = new DefaultServiceLocator();
-                locator.addService(RepositoryConnectorFactory.class, BasicRepositoryConnectorFactory.class);
-                locator.addService(TransporterFactory.class, FileTransporterFactory.class);
-                locator.addService(TransporterFactory.class, HttpTransporterFactory.class);
-                RepositorySystem system = locator.getService(RepositorySystem.class);
-                DefaultRepositorySystemSession session = new DefaultRepositorySystemSession();
-                LocalRepository localRepo = new LocalRepository(System.getProperty("user.home") + "/.m2/repository");
-                session.setLocalRepositoryManager(system.newLocalRepositoryManager(session, localRepo));
-                // 3. 配置中央仓库
-                List<RemoteRepository> repos = List.of(new RemoteRepository.Builder(
-                        "central", "default", "https://repo.maven.apache.org/maven2/").build());
-                // 4. 读取 pom.xml 的 groupId/artifactId/version
+
+                // 2. 初始化 Maven Resolver（org.eclipse.aether 体系）
+                RepositorySystem system = createRepositorySystem();
+                RepositorySystemSession session = createSession(system);
+
+                // 3. 配置远程仓库
+                List<RemoteRepository> repos = Collections.singletonList(
+                        new RemoteRepository.Builder(
+                                "central", "default", "https://repo.maven.apache.org/maven2/").build());
+
+                // 4. 读取 pom.xml 获取 GAV 坐标
                 Model model = new MavenXpp3Reader().read(new FileReader(pomFile));
                 String coords = model.getGroupId() + ":" + model.getArtifactId() + ":" + model.getVersion();
-                // 5. 构建依赖树请求
+
+                // 5. 构建依赖收集请求
                 CollectRequest collectRequest = new CollectRequest();
-                collectRequest.setRoot(new org.eclipse.aether.graph.Dependency(
+                collectRequest.setRoot(new Dependency(
                         new DefaultArtifact(coords), "compile"));
                 collectRequest.setRepositories(repos);
+
                 // 6. 解析依赖树
-                DependencyNode node = system.collectDependencies(session, collectRequest).getRoot();
-                // 7. 遍历依赖树，组装 JSON
-                List<Map<String, Object>> deps = new ArrayList<>();
-                collectDependencies(node, deps);
-                return new Gson().toJson(deps);
+                DependencyNode rootNode = system.collectDependencies(session, collectRequest).getRoot();
+
+                // 7. 遍历依赖树生成JSON
+                List<Map<String, Object>> dependencies = new ArrayList<>();
+                collectDependencies(rootNode, dependencies, 0);
+
+                return new Gson().toJson(dependencies);
             } catch (Exception e) {
                 return "{\"error\":\"依赖解析异常: " + e.getMessage() + "\"}";
             }
         });
     }
 
-    /**
-     * 递归遍历依赖树，收集所有依赖信息
-     */
-    private void collectDependencies(DependencyNode node, List<Map<String, Object>> deps) {
-        if (node.getDependency() != null) {
-            var art = node.getDependency().getArtifact();
-            Map<String, Object> dep = new HashMap<>();
-            dep.put("groupId", art.getGroupId());
-            dep.put("artifactId", art.getArtifactId());
-            dep.put("version", art.getVersion());
-            dep.put("scope", node.getDependency().getScope());
-            dep.put("conflict", node.getData().get("conflict") != null);
-            deps.add(dep);
+
+    // 创建 RepositorySystem（org.eclipse.aether 体系）
+    private RepositorySystem createRepositorySystem() {
+        // 使用 org.eclipse.aether.impl.DefaultServiceLocator
+        // DefaultServiceLocator locator = new DefaultServiceLocator();
+        // locator.addService(RepositoryConnectorFactory.class, BasicRepositoryConnectorFactory.class);
+        // locator.addService(TransporterFactory.class, FileTransporterFactory.class);
+        // locator.addService(TransporterFactory.class, HttpTransporterFactory.class);
+        // RepositorySystem system = locator.getService(RepositorySystem.class);
+
+        RepositorySystemSupplier systemSupplier = new RepositorySystemSupplier();
+        RepositorySystem system = systemSupplier.get();
+        if (system == null) {
+            throw new IllegalStateException("RepositorySystem 实例获取失败，依赖包可能缺失或SPI加载失败");
         }
+        return system;
+    }
+
+    // 创建 RepositorySystemSession
+    private RepositorySystemSession createSession(RepositorySystem system) {
+        // 使用 MavenRepositorySystemUtils 创建 session
+        org.eclipse.aether.DefaultRepositorySystemSession session = org.apache.maven.repository.internal.MavenRepositorySystemUtils
+                .newSession();
+        LocalRepository localRepo = new LocalRepository(System.getProperty("user.home") + "/.m2/repository");
+        session.setLocalRepositoryManager(system.newLocalRepositoryManager(session, localRepo));
+        return session;
+    }
+
+    // 递归收集依赖信息
+    private void collectDependencies(DependencyNode node, List<Map<String, Object>> result, int depth) {
+        Map<String, Object> depInfo = new LinkedHashMap<>();
+        if (node.getArtifact() != null) {
+            depInfo.put("groupId", node.getArtifact().getGroupId());
+            depInfo.put("artifactId", node.getArtifact().getArtifactId());
+            depInfo.put("version", node.getArtifact().getVersion());
+        }
+        if (node.getDependency() != null) {
+            depInfo.put("scope", node.getDependency().getScope());
+        }
+        depInfo.put("depth", depth);
+        result.add(depInfo);
         for (DependencyNode child : node.getChildren()) {
-            collectDependencies(child, deps);
+            collectDependencies(child, result, depth + 1);
         }
     }
 
